upgrade to JDK 21