@@ -26,8 +26,8 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -42,9 +42,9 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>-source</arg>
-                        <arg>20</arg>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.incubator.concurrent</arg>
+                        <arg>21</arg>
+                        <arg>-target</arg>
+                        <arg>21</arg>
                         <arg>--add-exports</arg>
                         <arg>java.base/jdk.internal.vm=ALL-UNNAMED</arg>
                     </compilerArgs>
